--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,7 @@
 
 server.port=8081
+spring.datasource.url=jdbc:mysql://localhost:3306/mydb
+spring.datasource.password=mayya121290
+spring.datasource.username=root
+spring.jpa.generate-ddl=true
+spring.jpa.hibernate.ddl-auto=update
